@@ -54,7 +54,8 @@ public final class Bootstrap {
     /**
      * Daemon object used by main.
      */
-    private static Bootstrap daemon = null;
+    private static final Object daemonLock = new Object();
+    private static volatile Bootstrap daemon = null;
 
     private static final File catalinaBaseFile;
     private static final File catalinaHomeFile;
@@ -133,9 +134,9 @@ public final class Bootstrap {
     private Object catalinaDaemon = null;
 
 
-    protected ClassLoader commonLoader = null;
-    protected ClassLoader catalinaLoader = null;
-    protected ClassLoader sharedLoader = null;
+    ClassLoader commonLoader = null;
+    ClassLoader catalinaLoader = null;
+    ClassLoader sharedLoader = null;
 
 
     // -------------------------------------------------------- Private Methods
@@ -176,8 +177,7 @@ public final class Bootstrap {
             try {
                 @SuppressWarnings("unused")
                 URL url = new URL(repository);
-                repositories.add(
-                        new Repository(repository, RepositoryType.URL));
+                repositories.add(new Repository(repository, RepositoryType.URL));
                 continue;
             } catch (MalformedURLException e) {
                 // Ignore
@@ -187,14 +187,11 @@ public final class Bootstrap {
             if (repository.endsWith("*.jar")) {
                 repository = repository.substring
                     (0, repository.length() - "*.jar".length());
-                repositories.add(
-                        new Repository(repository, RepositoryType.GLOB));
+                repositories.add(new Repository(repository, RepositoryType.GLOB));
             } else if (repository.endsWith(".jar")) {
-                repositories.add(
-                        new Repository(repository, RepositoryType.JAR));
+                repositories.add(new Repository(repository, RepositoryType.JAR));
             } else {
-                repositories.add(
-                        new Repository(repository, RepositoryType.DIR));
+                repositories.add(new Repository(repository, RepositoryType.DIR));
             }
         }
 
@@ -250,6 +247,7 @@ public final class Bootstrap {
 
     /**
      * Initialize daemon.
+     * @throws Exception Fatal initialization error
      */
     public void init() throws Exception {
 
@@ -262,10 +260,8 @@ public final class Bootstrap {
         // Load our startup class and call its process() method
         if (log.isDebugEnabled())
             log.debug("Loading startup class");
-        Class<?> startupClass =
-            catalinaLoader.loadClass
-            ("org.apache.catalina.startup.Catalina");
-        Object startupInstance = startupClass.newInstance();
+        Class<?> startupClass = catalinaLoader.loadClass("org.apache.catalina.startup.Catalina");
+        Object startupInstance = startupClass.getConstructor().newInstance();
 
         // Set the shared extensions class loader
         if (log.isDebugEnabled())
@@ -330,6 +326,8 @@ public final class Bootstrap {
 
     /**
      * Load the Catalina daemon.
+     * @param arguments Initialization arguments
+     * @throws Exception Fatal initialization error
      */
     public void init(String[] arguments)
         throws Exception {
@@ -342,6 +340,7 @@ public final class Bootstrap {
 
     /**
      * Start the Catalina daemon.
+     * @throws Exception Fatal start error
      */
     public void start()
         throws Exception {
@@ -355,6 +354,7 @@ public final class Bootstrap {
 
     /**
      * Stop the Catalina Daemon.
+     * @throws Exception Fatal stop error
      */
     public void stop()
         throws Exception {
@@ -367,6 +367,7 @@ public final class Bootstrap {
 
     /**
      * Stop the standalone server.
+     * @throws Exception Fatal stop error
      */
     public void stopServer()
         throws Exception {
@@ -380,6 +381,8 @@ public final class Bootstrap {
 
    /**
      * Stop the standalone server.
+     * @param arguments Command line arguments
+     * @throws Exception Fatal stop error
      */
     public void stopServer(String[] arguments)
         throws Exception {
@@ -404,6 +407,8 @@ public final class Bootstrap {
 
     /**
      * Set flag.
+     * @param await <code>true</code> if the daemon should block
+     * @throws Exception Reflection error
      */
     public void setAwait(boolean await)
         throws Exception {
@@ -448,22 +453,24 @@ public final class Bootstrap {
      */
     public static void main(String args[]) {
 
-        if (daemon == null) {
-            // Don't set daemon until init() has completed
-            Bootstrap bootstrap = new Bootstrap();
-            try {
-                bootstrap.init();
-            } catch (Throwable t) {
-                handleThrowable(t);
-                t.printStackTrace();
-                return;
+        synchronized (daemonLock) {
+            if (daemon == null) {
+                // Don't set daemon until init() has completed
+                Bootstrap bootstrap = new Bootstrap();
+                try {
+                    bootstrap.init();
+                } catch (Throwable t) {
+                    handleThrowable(t);
+                    t.printStackTrace();
+                    return;
+                }
+                daemon = bootstrap;
+            } else {
+                // When running as a service the call to stop will be on a new
+                // thread so make sure the correct class loader is used to
+                // prevent a range of class not found exceptions.
+                Thread.currentThread().setContextClassLoader(daemon.catalinaLoader);
             }
-            daemon = bootstrap;
-        } else {
-            // When running as a service the call to stop will be on a new
-            // thread so make sure the correct class loader is used to prevent
-            // a range of class not found exceptions.
-            Thread.currentThread().setContextClassLoader(daemon.catalinaLoader);
         }
 
         try {
@@ -483,11 +490,14 @@ public final class Bootstrap {
                 daemon.setAwait(true);
                 daemon.load(args);
                 daemon.start();
+                if (null == daemon.getServer()) {
+                    System.exit(1);
+                }
             } else if (command.equals("stop")) {
                 daemon.stopServer(args);
             } else if (command.equals("configtest")) {
                 daemon.load(args);
-                if (null==daemon.getServer()) {
+                if (null == daemon.getServer()) {
                     System.exit(1);
                 }
                 System.exit(0);
@@ -511,6 +521,7 @@ public final class Bootstrap {
     /**
      * Obtain the name of configured home (binary) directory. Note that home and
      * base may be the same (and are by default).
+     * @return the catalina home
      */
     public static String getCatalinaHome() {
         return catalinaHomeFile.getPath();
@@ -521,6 +532,7 @@ public final class Bootstrap {
      * Obtain the name of the configured base (instance) directory. Note that
      * home and base may be the same (and are by default). If this is not set
      * the value returned by {@link #getCatalinaHome()} will be used.
+     * @return the catalina base
      */
     public static String getCatalinaBase() {
         return catalinaBaseFile.getPath();
@@ -530,6 +542,7 @@ public final class Bootstrap {
     /**
      * Obtain the configured home (binary) directory. Note that home and
      * base may be the same (and are by default).
+     * @return the catalina home as a file
      */
     public static File getCatalinaHomeFile() {
         return catalinaHomeFile;
@@ -540,6 +553,7 @@ public final class Bootstrap {
      * Obtain the configured base (instance) directory. Note that
      * home and base may be the same (and are by default). If this is not set
      * the value returned by {@link #getCatalinaHomeFile()} will be used.
+     * @return the catalina base as a file
      */
     public static File getCatalinaBaseFile() {
         return catalinaBaseFile;
